JA corr in ch 3

--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -70,10 +70,11 @@ There are several research challenges that arise from the choices taken in each 
 We propose three contributions, one in terms of theoretical modelization and two in terms of NLP applications. Specifically, the contributions that we propose in this work are the following:
 \begin{itemize}
 \item a hypergraph network-based model to hold and combine heterogeneous linguistic data %as well as a tool to extract said data from unstructured text.
+\item a method to combine heterogeneous representations, coming from the hypergraph model, while at the same time alleviating the sparsity problem common while dealing with text features.
 \item a network-based algorithm to discover semantic relatedness between linked words
-\item a method to combine heterogeneous representations while at the same time alleviating the sparsity problem common while dealing with text features.
+
 \end{itemize}
-These contributions are tested and evaluated using two different NLP semantic tasks: Word Sense Induction and Disambiguation, and Named Entity Recognition. We chose these two tasks as they are semantic problems directly benefited by those methods  that are able to determine the relatedness among words, which is the case of the techniques we propose. Not less important, we attack these tasks as they are central building blocks of more intricate text analysis systems. Our propositions are built using open source tools and trained/tested using freely accessible corpora. We aim to make our software implementations are  to multi-threaded CPU computers when applicable.
+These contributions are tested and evaluated using two different NLP semantic tasks: Word Sense Induction and Disambiguation, and Named Entity Recognition. We chose these two tasks as they are semantic problems directly benefited by those methods  that are able to determine the relatedness among words, which is the case of the techniques we propose. Not less important, we attack these tasks as they are central building blocks of more intricate text analysis systems. Our propositions are built using open source tools and trained/tested using freely accessible corpora. We aim to make our software implementations as efficient as possible using parallelized solutions.
 
 
 \subsection{Modeling linguistic features}
@@ -83,7 +84,7 @@ Representing unstructured text within a model that describes textual units and t
 
 \paragraph{Contribution}
 
-During the last decade, graphs have been used to model textual data given its ability to naturally represent the dynamics and structured of text. We propose a linguistic resource in the form of an heterogeneous language network to be used as a first essential data model to solve Natural Language Processing tasks. 
+During the last decade, graphs have been used to model textual data given its ability to naturally describe the dynamics and structured of text. We propose to represent a linguistic resource in the form of a heterogeneous language network. This model then can be used as a comprehensive data source to address Natural Language Processing tasks. 
 
 The originality of our work consists in taking into account different types of features, e.g., lexical, syntactical, and orthographic information; and unifying them under a single hypergraph structure. An hypergraph differs from a graph in that its edges may link several nodes together at the same time. This flexibility allows for simple and efficient access to the stored elements, either specific types of words or specific features. (revoir: advantages of hyperedges]
 %
@@ -99,8 +100,7 @@ Leveraging the structure within the proposed linguistic network is one of our ma
 \paragraph{Contribution}
 Linguistic networks are complex structures that may hold  heterogeneous entities and links together. Properly leveraging these structures has been indeed a popular area of research in the NLP literature. 
 
-We propose a variant to a literature algorithm that solves word sens induction and disambiguation mainly by leveraging  the structure of a language network in. The assumption of the algorithm is that of the network having "real-world" characteristics, broadly, this means that there are several tight-knit groups of words within the structure. Nonetheless, contrary to the existent model, our proposition differs regarding the considerably lower number of parameters by adjusting them automatically according to the statistics of the concerned network. We also allow for more flexibility of the studied contexts of each word. Furthermore, we leverage the structure of our proposed linguistic model and go beyond the classic homogeneous cooccurrences by studying the effect of heterogeneous features on the quality of the senses induced by the system. Our experiments show the interest of our method by improving on the performance of similar methods and by being on the same ballpark of state-of-the-art methods. We also thoroughly analyze the characteristics of the results --the word senses-- according to the different types of  obtained by our system.
-
+We propose a variant to a literature algorithm that solves word sens induction and disambiguation mainly by leveraging  the structure of a language network in. The assumption of the algorithm is that of the network having "real-world" characteristics, broadly, this means that there are several tight-knit groups of words within the structure. Nonetheless, contrary to the existent model, our proposition differs regarding the considerably lower number of parameters by adjusting them automatically according to the statistics of the concerned network. We also allow for more flexibility of the studied contexts of each word. Furthermore, we leverage the structure of our proposed linguistic model and go beyond the classic homogeneous co-occurrences by studying the effect of heterogeneous features on the quality of the senses induced by the system. Our experiments show the interest of our method by improving on the performance of similar methods and by being on the same ballpark of state-of-the-art methods. 
  We  improve the overall performance compared to other similar graph-based techniques.
 
 \subsection{Combining features and dealing with sparsity}
@@ -108,10 +108,10 @@ We propose a variant to a literature algorithm that solves word sens induction a
 
 While the proposed linguistic network contain heterogeneous features, in our previous propositions we have exclusively employed them separately. Nonetheless, employing these different attributes on a single textual representation is equally useful in terms of solving NLP applications. A certain type of feature may indicate relations that are completely unknown in another representation space. Thus a certain type of features can complement another to improve the overall description of words.
 
-Another challenge that arises when building large cooccurrence networks, such as ours, is data sparsity. Indeed, sparsity is one of the main characteristics of textual data. Natural language processing systems rely on accurate information being found within a corpus. However, it is hard to see all the possible word cooccurrences in an input corpus and thus a system trained from it is not able to apply the acquired knowledge when it encounters unseen words and their cooccurrences.
+Another challenge that arises when building large co-occurrence networks, such as ours, is data sparsity. Indeed, sparsity is one of the main characteristics of textual data. Natural language processing systems rely on accurate information being found within a corpus. However, it is hard to see all the possible word co-occurrences in an input corpus and thus a system trained from it is not able to apply the acquired knowledge when it encounters unseen words and their co-occurrences.
 
 
-Towards addressing both challenges previously described we pose the following questions: \textbf{how to alleviate data sparsity on textual data?}  Concerning combining linguistic features, h\textbf{ow can we produce a single textual representation  that is able to leverage the complementarity among features?} Lastly, \textbf{what is the behavior of combining features against using them independently?} The answer to these questions may shed light into more robust NLP systems, able to cope with sparsity while leveraging at the same time useful information coming from different types features.
+Towards addressing both challenges previously described we pose the following questions: \textbf{how to alleviate data sparsity on textual data?}  Concerning combining linguistic features, \textbf{how can we produce a single textual representation (one unified feature space) that is able to leverage the complementarity among features?} Lastly, \textbf{what is the behavior of combining features against using them independently?} The answer to these questions may shed light into more robust NLP systems, able to cope with sparsity while leveraging at the same time useful information coming from different types features.
 
 
 % We explore multimedia fusion techniques to complement the features hold by the netuwork. Specifically, we focus on solving named entity recognition and word sense induction and disambiguation by applying feature-combination methods that have already shown their efficiency in the multimedia analysis domain.  Our results show that the combination of textual features indeed improves the performance compared to single feature representations and trivial features concatenation. Even more, we experiment with background information from open text sources to further improve the performance of our models. Finally, we also present an analysis on the behavior of features according to different types of senses and entity classes.
@@ -151,7 +151,7 @@ Figure \ref{fig:challenges_contribs} synthesizes the concerned NLP process-flow 
 %Afterwards, we present how these features can be combined to improve the results of single-feature based solutions. 
 %Finally, we detail the machine learning methods we employ in certain as part of our methodology. 
 
-\paragraph{Chapter \ref{chap:ling_net}} We begin by giving a review on how linguistic networks are used in the literature. This contextualizes our first contribution. We present and define a theoretical contribution: a novel structure to hold language information based on a hypergraph linguistic model.  We discuss its characteristics and the intuitions behind its conception: the choice of the structure, the role of nodes and heterogeneous edges, the type of features stored, the advantages it represents in terms of accessing and manipulating the data. Then, we introduce a set of techniques to make use of heterogeneous relations while dealing with sparsity, the feature fusion techniques. These methods are integral part of our contributions. Finally, we present a concrete application of our hypergraph model using the English Wikipedia. We describe its properties and motivations. Contents of this chapter are published in \cite{sorianoJournal,sorianoLREC,sorianoEGCChallenge}.
+\paragraph{Chapter \ref{chap:ling_net}} We begin by giving a review on how linguistic networks are used in the literature which contextualizes our first and second contributions. We present and define a novel structure to hold language information based on a fusion enriched hypergraph linguistic model.  First, as the first set of characteristics of the model, we discuss its characteristics and the intuitions behind its conception: the choice of the structure, the role of nodes and heterogeneous edges and the type of features stored.  Then, as the second important set of properties of the proposition, we introduce a set of techniques to make use of heterogeneous relations while dealing with sparsity in order to produce an unique enriched representation. Namely, we present the feature fusion techniques. These methods are integral part of our contributions. Finally, we present a concrete application of our hypergraph model, an instantiation of the model based on the English Wikipedia. We describe its properties and motivations. Contents of this chapter are published in \cite{sorianoJournal,sorianoLREC,sorianoEGCChallenge}.
 
 %This chapter describes the process of parsing and storing an English Wikipedia Syntactical Dump. We use open source tools on freely available data to generate a software that is able to extract lexical and syntactic data from a given corpus.We thus create and publicly release a syntactically annotated version of the English Wikipedia containing often-neglected information, stored in a format that facilitates its manipulation. 
 \paragraph{Chapter \ref{chap:wsd}} In this chapter, we present our two applied contributions. First, an algorithm that exploits the structure of the network, i.e., the connections between nodes to solve word sense induction and disambiguation. 
