--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -13,10 +13,10 @@ In the previous chapter we covered the details concerning the parameters regardi
 The challenges that we will address in this chapter are two: (1) how to organize heterogeneous textual information within a single linguistic resource, and (2), how to leverage said information to obtain complementary representation spaces, while taking into account the feature sparsity issue that is characteristic of textual data.
 
 
-A fusion-enriched hypergraph linguistic model is the first contribution of this thesis. The model consists on two componentsw which address two research questions each: the issue of making sparsity less severe and leveraging different types of features  by using a single feature representation space. We will describe our motivations and its characteristics in the following paragraphs. We can appreciate the block diagram of the ensemble of our propositions  on Figure \ref{fig:maindiag}. On the top, our enriched linguistic model proposition, which is the focus of this chapter. On the bottom and grayed out, the application of said model in NLP tasks, described thoroughly in Chapter \ref{chap:wsd}.
+The first two contributions of this thesis are contained in a fusion-enriched hypergraph linguistic model proposition. The model consists on two components which address two research questions each: the issue of making sparsity less severe and leveraging different types of features  by using a single feature representation space. We will describe our motivations and its characteristics in the following paragraphs. We can see the block diagram of the ensemble of our propositions  on Figure \ref{fig:maindiag}. There, we can observe our enriched linguistic model proposition, comprising our first two propositions, which is the focus of this chapter, as well as the instantiation of said model using a Wikipedia based corpus. %On the bottom, we show the application of said model in NLP tasks, described thoroughly in Chapter \ref{chap:wsd}.
 
-The model we present here entails three  important characteristics: firstly, the possibility to leverage different\footnote{We use three in our model definition: syntactic, lexical  and what we will call standard features (explained later on).} types of information.  Secondly, as the words will be linked together, there is an inner structure that will emerge from the model and which we exploit in our experiments. Thirdly, given that we treat unstructured text data, the relations (or features)  between words are sparse, this is alleviated by combining features via fusion techniques. 
-%In the following chapter, we test the practicality of our proposal with well-established tasks and related evaluation corpora, which we use as benchmark input data in our experiments. 
+The model we present here entails three  important characteristics: firstly, the possibility to leverage different\footnote{We use three in our model definition: syntactic, lexical  and what we will call standard features (explained later on).} types of information.  Secondly, as the words will be linked together, there is an inner structure that will emerge from the model and which we exploit in our experiments. Thirdly, given that we treat unstructured text data, the relations (or features)  between words are sparse, this is alleviated by combining features via fusion techniques.  The three of them are addressed with our propositions. 
+In the following chapter, we test the practicality of our proposal with well-established tasks and related evaluation corpora, which we use as benchmark input data in our experiments. 
 
 Our network is based on the distributional hypothesis, as described in the previous chapter.  As co-occurrence features, we select both lexical and syntactic contexts, indeed creating a linguistic resource that hold both types of information in order to get a complementary insight of words' relations. Our network sets a lexical window, a co-occurrence weighting, and the definition of similarity between vectors according to two semantic NLP tasks we treat in the following: word sense induction and disambiguation and named entity recognition. Nonetheless, the parameters chosen can be easily changed. Regarding representation, we base our model on a graph-based structure which holds the words as nodes and the linguistic relations as edges. Being able to use the structure of the graph is useful to solve NLP semantic tasks \cite{nastase2015survey}. The following paragraphs will describe this structure in detail.   
 %
@@ -29,14 +29,15 @@ Our network is based on the distributional hypothesis, as described in the previ
 
 \begin{figure}
 \centering
-\includegraphics[width=1\linewidth]{./images/Chapitre3/main_diag.pdf}
-\caption{Modular description of the contributions of this thesis. Notably the fusion enriched hypergraph model we propose and in the bottom (grayed out) the NLP tasks applications based on said model.}
+\includegraphics[width=1\linewidth]{./images/Chapitre3/main_diag_p1.pdf}
+\caption{Modular description of the first two contributions of this work, described in this chapter. We see the elements of the fusion enriched hypergraph model we propose and its proof of concept instantiation.} 
+%Also, at the bottom, the NLP tasks applications based on said model: word sense induction and disambiguation and named entity recognition.}
 \label{fig:maindiag}
 \end{figure}
 
-In order to contextualize our proposition, we begin with the state of the art on how linguistic networks are employed in the literature. We are interested on those networks previously covered: lexical, syntactical and semantic co-occurrence networks. We give emphasis to two aspects: how the inner structure is used to solve the tasks at hand, and what type of graph-based algorithm is used. The literature on graph-based approaches for NLP is vast, we thus focus specifically on semantic tasks, notably Word Sense Induction and Disambiguation, and Named Entity Recognition. We chose these two tasks as we focus on both of them for the rest of our contributions. Afterwards, we introduce our model, how to build it  and its properties. We focus on the description of hypergraphs and how they allow us to join together different linguistic networks. Next, we introduce the concept of fusion techniques used to combine the linguistic features and obtain an enriched representation.
+In order to contextualize our proposition, we begin with the state of the art on how linguistic networks are employed in the literature. We are interested in those networks previously covered: lexical, syntactical and semantic co-occurrence networks. We give emphasis to two aspects: how the inner structure is used to solve the tasks at hand, and what type of graph-based algorithm is used. The literature on graph-based approaches for NLP is vast, we thus focus specifically on semantic tasks, notably Word Sense Induction and Disambiguation, and Named Entity Recognition. We chose these two tasks as we focus on both of them for the rest of our contributions. Afterwards, we introduce our model, how to build it  and its properties. We focus on the description of hypergraphs and how they allow us to join together different linguistic networks. Next, we introduce the concept of fusion techniques used to combine the linguistic features and obtain an enriched representation.
 
-In that sense, this chapter presents a word representation model based on a generalization of graphs (we employ hypergraphs) that contains different types of linguistic data to characterize the terms (or words) contained within.  These representations are then combined with fusion techniques in order to ideally get an enriched and complementary feature space for each word. Finally, as a proof-of-concept, we describe the characteristics of the transformation of an English Wikipedia-based corpus into the framework we propose, a hypergraph model and its single enriched representation produced via fusion techniques. We show an example of the results produced by these fusion methods.
+In that sense, this chapter presents a word representation model based on a generalization of graphs (we employ hypergraphs) that contains different types of linguistic data to characterize the terms (or words) contained within.  These representations are then combined with fusion techniques in order to ideally get an enriched and complementary feature space for each word. Finally, as a proof of concept, we describe the characteristics of the transformation of an English Wikipedia-based corpus into the framework we propose, a hypergraph model and its single enriched representation produced via fusion techniques. We show an example of the results produced by these fusion methods.
 
 %The materialization of the proposed model allows us to computationally test the advantages as well as to discover the limitations of the proposed framework
 %In the following chapter, we show in our experiments that this is indeed the case. 
@@ -54,11 +55,9 @@ We present here an overview of linguistic network's related work. We discuss wha
 \paragraph{Using Lexical Co-occurrence Networks}
 
 Lexical Co-occurrence Networks (LCN) are  popular  since they do not require any special treatment to obtain them, just the input corpus. It is then natural that truly-unsupervised\footnote{Without the need of human-crafted semantic networks.} word sense induction approaches leverage these type of networks, and in return, the distributional hypothesis, to automatically discover senses for a given target word. That is why several WSI methods \cite{2004.Veronis,2007.Klapaftis.UOY,2010.Navigli.InducingWordSenses.Triangles,2008.Klapaftis.WSIUsingCollocations,2011.DiMarco.Navigli.ClusteringWebSearch,2011.Jurgens.WSICommunityDetection} are tightly related to LCNs. 
-The cited works use a LCN as described before while other works such as \cite{2007.Navigli.GraphConnectivity,2014.Tao.Qian.LexicalChainHypergraphWSI} represent, as we do,u the co-occurrence by means of a hypergraph scheme. In short, a hypergraph structure is a graph generalization where an edge (called hyperedge) can link more than two vertices per edge and thus it is able to provide a more complete description of the interaction between several nodes \cite{estrada2005}.
+The cited works use a LCN as described before while other works such as \cite{2007.Navigli.GraphConnectivity,2014.Tao.Qian.LexicalChainHypergraphWSI} represent, as we do, the co-occurrence by means of a hypergraph scheme. In short, a hypergraph structure is a graph generalization where an edge (called hyperedge) can link more than two vertices per edge and thus it is able to provide a more complete description of the interaction between several nodes \cite{estrada2005}. In that sense, in  \cite{2014.Tao.Qian.LexicalChainHypergraphWSI} they make use of this type of representation to solve the task of word sense induction. Briefly, in this task we have to determine a set of senses for a given target word in a corpus, according to its context (a context here being usually a paragraph where the target word occurs). In their paper, given an input document with several context instances for each target word, they first extract lexical chains (set of semantically related words) from the contexts using a topic-modeling based technique. Secondly, a hypergraph is built where the vertices represent words and the hyperedges link two or more words if they exist in the same lexical chain. Thirdly, the hypergraph is clustered and groups of words are found which are considered to be the senses of the target word. Lastly, to assign these senses to each target word instance, they consider each sense as a vector, whose dimensions are each word in the corresponding cluster and its weight determines its level of co-occurrence  with the target word. The sense assignation is done by determining the similarity between sense vectors and a vectorial representation of each target word instance.
 
-In their paper, given an input document with several contexts for each target word, they first group together the contexts via a topic-modeling technique. Thus, each context is assigned a particular group (in this case, a topic). Secondly, a hypergraph is built where the vertices represent contexts and the hyperedges link two nodes together if they share the same topic. Thirdly, the hypergraph is clustered and the words of each context (of each node) are used to build vectorial representations
-
-WSI systems generally perform four steps. Given an input text with a set of target words and their contexts (target words must have several instances throughout the document to cluster them), the steps are the following:
+Generally, WSI systems generally perform four steps. Given an input text with a set of target words and their contexts (target words must have several instances throughout the document to cluster them), the steps are the following:
 
 \begin{enumerate}
 \item Build a LCN, assigning tokens as nodes and  establishing edges between them if they co-occur in a given context (usually if they both appear in the same sentence),
@@ -536,7 +535,7 @@ Before getting into the experimentation details, in order to make our hypergraph
 
 
 
-\section{Proof of Concept: Wikipedia-based Corpus as Enriched Hypergraph Model}
+\section{Proof of Concept: Wikipedia-based Corpus as an Enriched Hypergraph}
 %In order to have a working dataset, we first built an application that process and parse any input corpus. We describe its properties, its inputs, the information extracted, as well as the output generated by the software.
 
 In order to materialize our proposed linguistic model, we need to first create a chain of applications that will extract text from a semi-structured body of text, tokenize it, parse it to extract the syntactic trees the model requires, and then store in order to be used by a NLP application. In this section we describe this process, implemented as an application that takes a corpus as input and outputs the linguistic resource we introduced in the previous section. In this practical example, we use the English Wikipedia corpus as the source for our corpus.
