--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1083,7 +1083,7 @@ publisher = "Wiley-Blackwell",
   booktitle = {Proceedings of COLING 2014, the 25th International Conference on Computational Linguistics: Technical Papers},
   pages     = {1601--1611},
   publisher = {Dublin City University and Association for Computational Linguistics},
-  year     = {2014-08},
+  year     = {2014},
   location  = {Dublin, Ireland},
   url       = {http://www.aclweb.org/anthology/C14-1152},
 }
@@ -1383,7 +1383,7 @@ publisher = "Wiley-Blackwell",
   author    = {Tsatsaronis, George and Vazirgiannis, Michalis and Androutsopoulos, Ion},
   title     = {Word Sense Disambiguation with Spreading Activation Networks Generated from Thesauri},
   booktitle = {IJCAI 2007},
-  year     = {2007-01},
+  year     = {2007},
   editor    = {Veloso, Manuela M.},
 }
 
